--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -25,7 +24,9 @@
             android:name=".RegisterActivity"
             android:label="@string/register"
             android:parentActivityName=".LoginActivity" />
-        <activity android:name=".ConversationListActivity"></activity>
+        <activity android:name=".ConversationListActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".UsersListActivity"></activity>
     </application>
 
 </manifest>
