--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "pl.com.kamilwrobel.czater"
+        applicationId "pl.com.kamilwrobel.getChaterApi"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -30,6 +30,7 @@ android {
 
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:1.16.14"
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -46,4 +47,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile group: 'com.jakewharton', name: 'butterknife', version: '1.2.2'
     compile 'javax.inject:javax.inject:1'
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.2.0'
+
 }
