--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name">
+        <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,12 +18,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/register"
-            android:parentActivityName=".LoginActivity" />
-        <activity android:name=".ConversationListActivity" />
-        <activity android:name=".ChatActivity" />
-        <activity android:name=".UsersListActivity"></activity>
+            android:name=".Register.RegistrationActivity"
+            android:parentActivityName=".Login.LoginActivity"/>
     </application>
 
 </manifest>
